<resources>
    <string name="app_name" translatable="false">Everyweather</string>
    <string name="weather">Weather</string>
    <string name="dot_temperature" translatable="false">°</string>
    <string name="percent" translatable="false">%</string>
    <string name="current_location">Current location</string>
    <string name="search_hint">Search</string>
    <string name="set_place_on_map">Set place on map</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="allow">Allow</string>
    <string name="load_weather_of_this_location">Load weather of this location?</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="saved_locations">Saved locations</string>
    <string name="feels_like">Fells like:</string>
    <string name="enter_location_name">Enter location name</string>
    <string name="enter_name">Enter name</string>
    <string name="your_current_location_not_found">Your current location not found. Check your phone location settings</string>
    <string name="results_were_found">Results found: %d</string>
    <string name="redirection">Redirection…</string>
    <string name="powered_by" translatable="false">Powered by: Weather API</string>
    <string name="search_by" translatable="false">Search by LocationIQ.com</string>
    <string name="uri" translatable="false">https://www.weatherapi.com/</string>
    <string name="location_search_url" translatable="false">https://locationiq.com</string>
    <string name="api_key_error">Sorry, developer has problems with weather information provider. Retry later</string>
    <string name="geo_api_error">Sorry, developer has problems with geocoding information provider. Retry later</string>
    <string name="q_not_provided">You must have typed wrong location. It must not be empty</string>
    <string name="no_location_found">No location found matching your request:\n%s\nPlease, try again</string>
    <string name="api_request_is_invalid">Weather provider request url is invalid.</string>
    <string name="internal_app_error">Sorry, something went wrong. Internal application error</string>
    <string name="unknown_app_error">Sorry, something went wrong. Unknown application error</string>
    <string name="wrong_server_result">Sorry, we have received wrong result from weather provider. Please, retry again</string>
    <string name="server_error">Sorry, server error. Please, retry again</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="field_must_not_be_empty">Field must not be empty</string>
    <string name="next_days_forecast">Next days forecast</string>
    <string name="no_data_to_load">No data to load</string>
    <string name="change_location_name">You can change location name here</string>
    <string name="set_default_name">Set default name</string>
    <string name="require_location_permissions_title">Location permissions are required to load weather of your location.</string>
    <string name="require_location_permissions_description">To grant permissions, navigate to \"App info\" on your device, after that go to \"Permissions\" and allow location permissions.</string>
    <string name="location_permissions_are_not_granted">Location permissions are not granted. You can navigate to device\'s application settings menu and grant permissions</string>
    <string name="your_saved_cities_list_is_empty">Your saved cities list is empty. Load weather data and add your location from weather screen.</string>
    <string name="no_weather_data_is_loaded_header">No weather data is loaded. \nPlease, try following:</string>
    <string name="no_weather_data_is_loaded">\t-Check internet connection
        \n\t-Check location permission settings (it is needed for loading weather at your location)
        \n\t-Navigate to \"Location\" screen and enter desired city name</string>
    <string name="update_available_title">Update available</string>
    <string name="update_ready_to_install_title">Update is ready to be installed</string>
    <string name="should_install_update_description">Install update now?</string>
    <string name="update_available_description">Update app in background?</string>
    <string name="update_available_later_button">Remind later</string>
    <string name="update_install_button">Install now</string>
    <string name="update_dismiss_button">Dismiss</string>
    <string name="update_available_update_button">Update now</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise_sunset">Sunrise/sunset</string>
    <string name="probability_of_precipitation">Probability of precipitation</string>
    <string name="max_wind">Max wind</string>
    <string name="moonrise_moonset">Moonrise/Moonset</string>
    <string name="wind">Wind</string>
    <string name="save_location">Save location</string>
    <string name="choose_location">Choose location</string>
    <string name="find_on_map">Find on map</string>
    <string name="deleted">Deleted</string>
    <string name="name_updated">Name updated</string>
    <string name="saved">Saved</string>
    <string name="kmh">km/h</string>
    <string name="mm">mm</string>
    <string name="mmhg">mmHg</string>
    <string name="inch">inch</string>
    <string name="delete">Delete?</string>
    <string name="retry">Retry</string>
    <string name="mb">mb</string>
    <string name="delimiter" translatable="false">|</string>
    <string name="looking_for_your_location">Looking for your location…</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="language">Language</string>
    <string name="distance_dimension">Wind speed</string>
    <string name="temperature_dimension">Temperature</string>
    <string name="app_settings">Application settings</string>
    <string name="dimension_settings">Dimension settings</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="mph">mph</string>
    <string name="ms">m/s</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="system">System</string>
    <string name="fahrenheit" translatable="false">°F</string>
    <string name="celcius" translatable="false">°C</string>
    <string name="retry_again">Please, retry again</string>
    <string name="update_available_update_in_background_button">Update in background</string>
    <string name="could_not_load_hourly_weather">Could not load hourly weather</string>

</resources>