<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvWeatherData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_weather_data_is_loaded"
        android:visibility="gone"
        tools:visibility="visible" />
    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:id="@+id/appBarLayout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="?attr/actionBarSize"-->
    <!--        app:theme="@style/ThemeOverlay.AppCompat.Dark"-->
    <!--        android:fitsSystemWindows="true"-->
    <!--        >-->

    <!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:fitsSystemWindows="true"-->
    <!--            app:contentScrim="?attr/colorPrimary"-->
    <!--            app:expandedTitleMarginEnd="64dp"-->
    <!--            app:expandedTitleMarginStart="48dp"-->
    <!--            app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
    <!--            app:theme="@style/ThemeOverlay.AppCompat.Dark">-->


    <!--            <androidx.appcompat.widget.Toolbar-->
    <!--                android:id="@+id/toolbar"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="?attr/actionBarSize"-->
    <!--                app:layout_collapseMode="pin"-->
    <!--                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />-->

    <!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
    <!--    </com.google.android.material.appbar.AppBarLayout>-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMainWeather"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvSaveLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#43000000"
            android:gravity="center"
            android:text="@string/save_location"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:lines="2"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="@+id/imgIcon"
            app:layout_constraintTop_toTopOf="@id/tvPlace"
            tools:text="07.08.20\n 06:20" />

        <TextView
            android:id="@+id/tvPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:ellipsize="end"
            android:lines="1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/tvDate"
            app:layout_constraintStart_toEndOf="@+id/tvDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSaveLocation"
            tools:text=" bvcbvghj"
            app:drawableLeftCompat="@drawable/ic_location" />

        <TextView
            android:id="@+id/tvCurrentTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:textColor="@color/black"
            android:textSize="70sp"
            app:layout_constraintStart_toStartOf="@id/tvPlace"
            app:layout_constraintTop_toBottomOf="@+id/tvPlace"
            tools:text="28" />

        <TextView
            android:id="@+id/tvFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tvCurrentTemp"
            app:layout_constraintTop_toBottomOf="@id/tvCurrentTemp"
            tools:text="feels like 13" />

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintBottom_toBottomOf="@+id/tvCurrentTemp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate" />


        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="@dimen/margin_8"
            android:lines="2"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvFeelsLike"
            app:layout_constraintTop_toTopOf="@+id/tvFeelsLike"
            tools:text="Облачно" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHourly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            tools:itemCount="1"
            tools:listitem="@layout/hour_item" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cvMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/teal_700"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvHourly">

            <include
                android:id="@+id/included_container"
                layout="@layout/container_detailed_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <!--                <com.google.android.material.floatingactionbutton.FloatingActionButton-->
        <!--                    android:id="@+id/fabFavorite"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_margin="10dp"-->
        <!--                    android:elevation="12dp"-->
        <!--                    app:layout_constraintTop_toBottomOf="@id/cvMain"-->
        <!--                    app:layout_constraintEnd_toEndOf="parent"-->
        <!--                    android:src="@drawable/favorite_selector"-->
        <!--                    app:fabSize="auto"-->
        <!--                    app:maxImageSize="28dp" />-->

        <TextView
            android:id="@+id/tvNextDaysHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/next_days_forecast"
            android:textSize="20sp"
            android:background="#43000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvMain" />

        <TextView
            android:id="@+id/tvPoweredBy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/powered_by"
            android:layout_marginBottom="@dimen/margin_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
